*********************************************************************************************
*                                  CHANGE LOG 1.0.0 - > 1.x.x                               *
*********************************************************************************************
  * (4/7/2011) Vaclav Souhrada
    # 202
      
      CHANGED: Version of the JUIGLE library changed - 1.0.2-RC1
      CHANGED: Version of the PluginEngine library changed - 1.0.1
      CHANGED: Perspective loader - Now is not NullPointerException throw if not exist category Perspective in plugin.xml
      CHANGED: Perspectives now contains unique identifier method getID and static constant which contains a specific identifier value
      CHANGED: Added a support for switching perspectives from one perspective to the another - a new feature from JUIGLE-1.0.2-RC1
      

  * (4/7/2011) Petr Miko
    # 201
      
      CHANGED: resolved get value issue in table models.
  
  * (4/7/2011) Petr Miko
    # 200

      CHANGED: EDEDBPerspective display menu items bug solved (by additional boolean menuInited)
      CHANGED: action delete and analyse now reacts when no file is selected. JerpaLang extended for those new texts.
      CHANGED: toolbar buttons now have icons
      CHANGED: all actions now have mnemonics
      ADDED:   few new icons from same pack as already used icons.

      EDEDB is now ready for release.

  * (4/5/2011) Petr Miko
    # 198
    
      CHANGED: during downloading in EDEDB, Analyse buttons are blocked (not exactly the best way, but loading file routine dos not recognize that the file is not closed)
      CHANGED: in Vdefloader added throw ioexception in loading eeg binary / there was only print stacktrace, in case of missing eeg file jerpa froze.
      CHANGED: Working.java - counter is now limited in range of <0: Integer.MAX) - solved some display issues)
      CHANGED: solved table repaint issue when file was downloaded.  
  
  * (4/4/2011) Petr Miko
    # 197
    